# jaro-winkler-distance

./: .gitignore  .tool-versions  .travis.yml  CHANGELOG  CONTRIBUTOR  README.md  README.rst  cydistance.cpython-39-x86_64-linux-gnu.so.avx2  cydistance.cpython-39-x86_64-linux-gnu.so.avx512  example.py  mise.toml  pyproject.toml  release.sh  setup.py  tox.ini
.github/workflows/: push.yml  workflow.yml
jarowinkler/: distance.py
pyjarowinkler/: __init__.py  __init__.pyi  comparative.py  cydistance.pyx  distance.py  distance.pyi  distancec.c  distancec.pyx  glyph.py
test/: __init__.py  test_distance.py
tests/: test_benchmark.py  test_comparative.py  test_distance.py
tests/benchmark/: jaro_distance.py  jaro_similarity.py  jaro_winkler_distance.py  jaro_winkler_similarity.py
